# SpetraMindV50

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LOGGING_USAGE.md  Makefile  README.md  SECURITY.md  dvc.yaml  events.jsonl  install_bin_spectramind.sh  mkdocs.yml  push_root_files.sh  pyproject.toml  pytest.ini  requirements.txt  spectramind.py  v50_debug_log.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  setup.sh
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  KAGGLE.md  PULL_REQUEST_TEMPLATE.md
conf/: config.yaml
configs/: README.md  config.yaml  config_v50.yaml  default.yaml  defaults.yaml  hydra.yaml
docs/: ARCHITECTURE.md  LOGGING.md  README.md  USAGE.md  architecture.md  index.md
examples/: logging_bootstrap.py
logs/: .gitkeep  README.md  events.jsonl
scripts/: .keep  README.md  add_project_docs.sh  analyze_log.sh  bootstrap_spectramind_v50.sh  bundle_submission.sh  calibrate_v50.sh  check_cli_map.sh  ci_check.sh  ci_selftest.sh  clean_logs.sh  corel_train.sh  demo_logging.py  diagnose_dashboard.sh  docker_build.sh  easy_button_push.sh  export_env.sh  generate_dummy_data.sh  github_rollout.sh  hash_config.sh  install_configs_symbolic_molecules_schemas.sh  install_symbolic_configs_v50.sh  install_symbolic_overrides.sh  kitchen_sink_push.sh  launch_dashboard.sh  one_click_make_submission.sh  predict_v50.sh  profile_diagnose.sh  push-configs.sh  push.sh  push_bells.sh  push_mu_decoder_configs.sh  push_ready_check.sh  run_selftest.sh  symbolic_rank.sh  train_v50.sh  tsne_latents.sh  umap_latents.sh  validate-weights.sh
src/: __init__.py
tests/: __init__.py  conftest.py  test_fusion.py  test_import.py
tools/: check_hydra_sync.py  repo_audit_and_scaffold.py  selftest_sigma_decoder.py  sync_dropins.py  validate_configs.py
(+954 files in other folders)
