[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectramindv50"
version = "0.0.1"
description = "NeurIPS Ariel Data Challenge – SpectraMindV50 logging/telemetry"
requires-python = ">=3.10"
dependencies = [
  "hydra-core>=1.3",
  "psutil>=5.9",
  "pyyaml>=6.0",
  "packaging>=24.0",
  # Optional experiment trackers (enable in config)
  "mlflow>=2.15; extra == 'mlflow'",
  "wandb>=0.17; extra == 'wandb'",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.15"]
wandb = ["wandb>=0.17"]

[tool.setuptools.packages.find]
where = ["src"]

